--- a/Assignment2/style.css
+++ b/Assignment2/style.css
@@ -15,11 +15,18 @@ body {
   display: block;
   width: 640px;
   height: 480px;
+
 }
 
 .displayed-img {
+  display: block;
   width: auto;
   height: 100%;
+  
+  margin-left: auto;
+  margin-right: auto;
+  width: 50%;
+
 }
 
 .overlay {
